Initial Commit feat: Changed dyanmic Beh. in terms of functionality (Not Ready for Colab).

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,6 +1,8 @@
 {
-  "@comment": {
-    "description": "Localization for English"
-  },
-  "title" : "Title"
+  "appTitle" : "HUXLEY",
+  "seeAllText": "See All",
+  "propertyText": "Property",
+  "helloAppBarText": "Hello,",
+  "goodMorningAppBarText": "Good Morning"
+
 }
