--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -1,6 +1,7 @@
 {
-  "@comment": {
-    "description": "Localization for French"
-  },
-  "title" : "..."
+  "appTitle" : "HUXLEY",
+  "seeAllText": "Voir tout",
+  "propertyText": "Immobilier",
+  "helloAppBarText": "Bonjour,",
+  "goodMorningAppBarText": "Bonne journée"
 }
