Initial Commit feat: Changed dyanmic Beh. in terms of functionality (Not Ready for Colab).
Added Login information and created SHA1 KEY with SHA256 with Android SignIn Report for DropDev
(Colab Not Allowed)

--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -3,5 +3,5 @@
   "seeAllText": "Ver Más",
   "propertyText": "Hogar",
   "helloAppBarText": "Hola,",
-  "goodMorningAppBarText": "Buenos día"
+  "goodMorningAppBarText": "Buenos días"
 }
