Second Commit: general changes: Feature: Firebase Web app Integration with Google Auth integration and popover widgets with logic for VoidCallBacks on each indexed tile

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -5,14 +5,19 @@
   "helloAppBarText": "Hello,",
   "goodMorningAppBarText": "Good Morning",
   "singUpText": "Sign Up",
-  "logInText" : "Login In",
+  "logInText" : "Log In",
+  "signUpText" : "Sign Up",
   "enterPhoneFieldText" : "Enter your Phone...",
   "enterEmailFieldText" : "Enter your Email",
   "enterPasswordFieldText" : "Enter your Password",
+  "confirmPasswordFieldText" : "Confirm your Password",
   "continueText" : "Continue",
-  "loginWithAppleText" : "Log In with Apple",
-  "loginWithGoogleText" : "Log In with Google",
+  "loginWithAppleText" : "Sign In with Apple",
+  "loginWithGoogleText" : "Sign In with Google",
   "signUpWithAppleText" : "Sign up with Apple",
   "singUpWithGoogleText" : "Sign up with Google",
-  "dontHaveAnAccountText" : "Don't have an account? "
+  "dontHaveAnAccountText" : "Don't have an account? ",
+  "haveAnAccountText" : "Have an account? ",
+  "googleOnErrorAuth" : "Something went Wrong...",
+  "googleOnErrorAuthText" : "We could't determine who you are... Please try again"
 }
