--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -14,8 +14,8 @@
   "continueText" : "Continuer",
   "loginWithAppleText" : "Connexion avec Apple",
   "loginWithGoogleText" : "Connexion avec Google",
-  "signUpWithAppleText" : "Regístrate con Apple",
-  "singUpWithGoogleText" : "Regístrate con Google",
+  "signUpWithAppleText" : "Se connecter avec Apple",
+  "singUpWithGoogleText" : "Se connecter avec Google",
   "dontHaveAnAccountText" : "Vous n'avez pas de compte ?",
   "haveAnAccountText" : "Vous avez un compte ? ",
   "googleOnErrorAuth" : "Quelque chose s'est mal passé...",
