--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -21,5 +21,8 @@
   "googleOnErrorAuth" : "Something went Wrong...",
   "googleOnErrorAuthText" : "We could't determine who you are... Please try again",
   "meUserOptionText" : "Me",
-  "logOutUserText" : "log Out"
+  "logOutUserText" : "log Out",
+  "errorSignInEmailAndPassword" : "Weather your email or password are incorrect...Try Again",
+  "errorSingUpWithEmailAndPassword" : "Algo salió mal... inténtalo de nuevo más tarde",
+  "passwordMismatchError" : "The passwords you provided do not match please check them and try again..."
 }
