--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -21,5 +21,8 @@
   "googleOnErrorAuth" : "Quelque chose s'est mal passé...",
   "googleOnErrorAuthText" : "Nous n'avons pas pu déterminer qui vous êtes... Veuillez réessayer",
   "meUserOptionText" : "moi",
-  "logOutUserText" : "Se déconnecter"
+  "logOutUserText" : "Se déconnecter",
+  "errorSignInEmailAndPassword" : "Votre email ou votre mot de passe est incorrect... Veuillez réessayer",
+  "errorSingUpWithEmailAndPassword" : "Les mots de passe que vous avez fournis ne correspondent pas, veuillez les vérifier et réessayer...",
+  "passwordMismatchError" : "Quelque chose s'est mal passé... réessayez plus tard"
 }
